Fix SpareParts crash going into battery stats.
Change-Id: Ib158b811c291285660be6fb35ec0f75c429fcea4
http://code.google.com/p/android/issues/detail?id=14898

--- a/apps/SpareParts/res/xml/spare_parts.xml
+++ b/apps/SpareParts/res/xml/spare_parts.xml
@@ -26,7 +26,7 @@
                 android:summary="@string/summary_battery_history">
             <intent android:action="android.intent.action.MAIN"
                     android:targetPackage="com.android.settings"
-                    android:targetClass="com.android.settings.battery_history.BatteryHistory" />
+                    android:targetClass="com.android.settings.fuelgauge.PowerUsageSummary" />
         </PreferenceScreen>
         
         <PreferenceScreen android:key="battery_information_settings"
