reassign modifications for compcache
Change-Id: Ib3b271c56544166044bda9c0bab294f52db15536

--- a/apps/SpareParts/res/values/arrays.xml
+++ b/apps/SpareParts/res/values/arrays.xml
@@ -65,4 +65,21 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+    
+
+    <string-array name="entries_compcache_size">
+        <item>0 (off)</item>
+        <item>10 %</item>
+        <item>20 %</item>
+        <item>30 %</item>
+        <item>50 %</item>
+    </string-array>
+
+    <string-array name="entryvalues_compcache_size">
+        <item>0</item>
+        <item>10</item>
+        <item>20</item>
+        <item>30</item>
+        <item>50</item>
+    </string-array>
 </resources>
