--- a/apps/SpareParts/res/values/arrays.xml
+++ b/apps/SpareParts/res/values/arrays.xml
@@ -82,4 +82,11 @@
         <item>30</item>
         <item>50</item>
     </string-array>
+    
+    <string-array name="entries_heapsize">
+        <item>12m</item>
+        <item>16m</item>
+        <item>24m</item>
+        <item>32m</item>
+    </string-array>
 </resources>
