--- a/apps/SpareParts/res/values/arrays.xml
+++ b/apps/SpareParts/res/values/arrays.xml
@@ -83,6 +83,24 @@
         <item>50</item>
     </string-array>
     
+    <string-array name="entries_swappiness">
+        <item>0</item>
+        <item>10</item>
+        <item>15</item>
+        <item>20</item>
+        <item>30</item>
+        <item>40</item>
+    </string-array>
+
+    <string-array name="entryvalues_swappiness">
+        <item>0</item>
+        <item>10</item>
+        <item>15</item>
+        <item>20</item>
+        <item>30</item>
+        <item>40</item>
+    </string-array>
+
     <string-array name="entries_heapsize">
         <item>12m</item>
         <item>16m</item>
